--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					Professional Experiences
 				</div>
 				<div class="jumbotron">
-					<h3><a href="https://www2.wwt.com/" target="_blank">World Wide Technology</a></h3>
+					<h3><a href="https://www.wwts.com/" target="_blank">World Wide tech services</a></h3>
 					<div class="year">03/2015 - 09/2015</div>
 					<h4>Field Engineer</h4>
 					<div class="thumbnail">
@@ -77,10 +77,11 @@
 					<h4>IT Help Desk</h4>
 					<div class="thumbnail">
 							<ul>	
-								<li>Provide customer support and repair under warranty PCs and laptops.</li>
-								<li>Answer client questions in a professional manner</li>
-								<li>Handle various tickets from Hp, IBM,Dell,lenovo and support customers on a timely manner.</li>
-								<li>Complete all administrative tasks associated with each call. </li>
+								<li>Reset passwords on active directory, oracle, PeopleSoft….</li>
+								<li>Verify users</li>
+								<li>Troubleshoot various software and hardware problems via phone or remote sessions/logmein.com/.</li>
+                                                                <li>Microsoft outlook troubleshooting</li>
+								<li>Microsoft outlook troubleshooting </li>
 							</ul>	
 					</div>
 				</div>
