--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
 					<article><em> To get a position where I can make effective contribution to the company by implementing my knowledge and experience.</em></article><em>
 				</div>
 			</div>
+			         <div class="jumbotron">
+                                          <h3>Education</h3>
+                                 <div class="thumbnail">
+                        <ul>
+                                 <li>IT Ready, Comptia A+ certified Minneapolis, Mn ,2014 </li>
+                                  <li>Saint Paul College, Programming course works,St.Paul,Mn,2012</li>
+                                  <li>Saint Paul college,Pharmacy technician certificate, St.Paul,Mn,2011</li>
+                        </ul>
+                        </div>
+                       </div>
 			<div  class="jumbotron">
 					<h3>Major Strengths</h3>
 					<div class="thumbnail">
