--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-		<meta content="utf-8" http-equiv="encoding">
-		<title>Martha Mekuria Prime Academy Application Submission</title>
+		<meta charset="UTF-8">
+                <title>Martha Mekuria Prime Academy Application Submission</title>
 	    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -124,7 +123,7 @@
 			</div>
 			<footer class="panel-footer">
               <p style="display:inline-block;">&copy;2015 - Martha Mekuria Prime Academy Application Submission </p>
-			  <p>11651 Millpond ave, Burnsville MN 55337</p>
+			  
             </footer>
 		</div>
 </html>
