--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 		<meta charset="UTF-8">
-                <title>Martha Mekuria Prime Academy Application Submission</title>
+                <title>Martha Mekuria Prime Academy Application </title>
 	    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -11,7 +11,7 @@
 	
 		<div class="body-content" >
 			<div id="content-header">
-				<span style="color:black;font-size: 64;font-size: 64px;">Martha Mekuria</span>
+				<span style="color:black;font-size: 64px;">Martha Mekuria</span>
 			</div>
 			<div class="thumbnail">
 				<div><span class="badge"><span class="glyphicon glyphicon-earphone"></span></span> &nbsp;<a href="tel:6513541268"> 651-354-1268</a>&nbsp;</div>
@@ -122,7 +122,7 @@
 			</div>
 			</div>
 			<footer class="panel-footer">
-              <p style="display:inline-block;">&copy;2015 - Martha Mekuria Prime Academy Application Submission </p>
+              <p style="display:inline-block;">&copy;2015 - Martha Mekuria Prime Digital Academy Application </p>
 			  
             </footer>
 		</div>
