--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 		<meta charset="UTF-8">
-                <title>Martha Mekuria Resume </title>
+                <title>Martha's Resume </title>
 	    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
