--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			</div>
 			<div class="thumbnail">
 				<div><span class="badge"><span class="glyphicon glyphicon-earphone"></span></span> &nbsp;<a href="tel:6513541268"> 651-354-1268</a>&nbsp;</div>
-				<div><span class="badge"><span class="glyphicon glyphicon-envelope"></span></span> &nbsp;<a href="mailto:marthamekuria@gmail.com?Subject=Hello%20again" target="_top">marthamekuria@gmail.com</a> &nbsp;&nbsp;</div>
+				<div><span class="badge"><span class="glyphicon glyphicon-envelope"></span></span> &nbsp;<a href="mailto:yuhanapeace@gmail.com">yuhanapeace@gmail.com</a> &nbsp;&nbsp;</div>
 				<div><span class="badge"><span class="glyphicon glyphicon-home"></span></span> &nbsp; 11651 Millpond ave, Burnsville MN, 55337</div>
 			</div>
 			<div class="jumbotron">
