--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			</div>
 			</div>
 			<footer class="panel-footer">
-              <p style="display:inline-block;">&copy;2015 - Martha Mekuria Prime Digital Academy Application </p>
+              <p style="display:inline-block;">&copy;2015 - Martha Mekuria's Resume </p>
 			  
             </footer>
 		</div>
